--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "metronic": {
+    "shell": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -82,18 +82,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "metronic:build"
+            "browserTarget": "shell:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "metronic:build:production"
+              "browserTarget": "shell:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "metronic:build"
+            "browserTarget": "shell:build"
           }
         },
         "test": {
@@ -126,7 +126,7 @@
         }
       }
     },
-    "metronic-e2e": {
+    "shell-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -135,11 +135,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "metronic:serve"
+            "devServerTarget": "shell:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "metronic:serve:production"
+              "devServerTarget": "shell:serve:production"
             }
           }
         },
@@ -155,7 +155,7 @@
       }
     }
   },
-  "defaultProject": "metronic",
+  "defaultProject": "shell",
   "cli": {
     "analytics": "b1dfc39d-aa30-4e3a-8d5a-d646228c4f05"
   }
